# ChangeLog for app-emacs/wanderlust
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/wanderlust/ChangeLog,v 1.54 2007/04/20 04:44:57 ulm Exp $

  20 Apr 2007; Ulrich Mueller <ulm@gentoo.org> -wanderlust-2.14.0-r2.ebuild:
  Removed old revision.

  19 Apr 2007; Bryan Østergaard <kloeri@gentoo.org>
  wanderlust-2.14.0-r3.ebuild:
  Add ~alpha keyword, bug 168420.

  31 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  wanderlust-2.10.1-r2.ebuild, wanderlust-2.12.2.ebuild,
  wanderlust-2.14.0-r1.ebuild, wanderlust-2.14.0-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  08 Mar 2007; Christian Faulhammer <opfer@gentoo.org> files/70wl-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

*wanderlust-2.14.0-r3 (26 Feb 2007)

  26 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  +wanderlust-2.14.0-r3.ebuild:
  corrected dependencies and added some quotes; fixes bug 168340, reported by
  Ulrich Mueller <ulm@kph.uni-mainz.de>

  23 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  -wanderlust-2.8.1.ebuild:
  clean up

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  28 Jan 2007; Marius Mauch <genone@gentoo.org> wanderlust-2.8.1.ebuild,
  wanderlust-2.10.1-r2.ebuild:
  Replacing einfo with elog

*wanderlust-2.14.0-r2 (06 Mar 2006)

  06 Mar 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +wanderlust-2.14.0-r2.ebuild:
  Include bbdb-wl.el in the installation; Resolves Bug #102920.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  wanderlust-2.14.0-r1.ebuild:
  Mark 2.14.0-r1 stable on alpha

  02 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
  wanderlust-2.14.0-r1.ebuild:
  Stable on ppc.

  29 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  wanderlust-2.14.0-r1.ebuild:
  Stable on sparc

  29 Sep 2005; Mamoru KOMACHI <usata@gentoo.org> files/70wl-gentoo.el,