@@ -1,21 +1,6 @@
 AUX 70wl-gentoo.el 307 RMD160 b9f8276a8db30a9a7ae6d35288b26d9a07e5abad SHA1 7cbcf9dca1780232011ac67eefd18de221f18a62 SHA256 5f26a8793abfcb67a9febef2411c43f71bcfae619470ceffab62e1345c83d299
-MD5 76143f1121fae861d712b4bfa1f9d601 files/70wl-gentoo.el 307
-RMD160 b9f8276a8db30a9a7ae6d35288b26d9a07e5abad files/70wl-gentoo.el 307
-SHA256 5f26a8793abfcb67a9febef2411c43f71bcfae619470ceffab62e1345c83d299 files/70wl-gentoo.el 307
 DIST wl-2.14.0-20050405.diff 16123 RMD160 d88173f176ee8608f81369b6d4ac219cffe960f1 SHA1 5267739fcad7693ce24cdeda3461e19704b8a4d9 SHA256 09b1f4365756fd990f7c2d47e506ab5fa3186a423101380b2d26b617af2a213d
 DIST wl-2.14.0.tar.gz 1101505 RMD160 1a5aa025fc05cbcf2a7d390b1804cc1b22f5df2b SHA1 75b93013444cb27ca540462afbaefdce0e157b3f SHA256 883b61e7e9560aff35efcf7d0d48b0ddd7cde598895ffd111ff214072253eb1f
-EBUILD wanderlust-2.14.0-r3.ebuild 1588 RMD160 caa438f6c938ed155a86e980d3efcbaae1f91ab6 SHA1 d00d641f2cf030fd2b32ad0e3da7c2cb0bd5ceda SHA256 511d39702f0148de482a49ff9f7379f4600b297259ecfd4f177a1b56b8da757d
-MD5 27e8f01250d5ade26329120ceb14f93a wanderlust-2.14.0-r3.ebuild 1588
-RMD160 caa438f6c938ed155a86e980d3efcbaae1f91ab6 wanderlust-2.14.0-r3.ebuild 1588
-SHA256 511d39702f0148de482a49ff9f7379f4600b297259ecfd4f177a1b56b8da757d wanderlust-2.14.0-r3.ebuild 1588
-MISC ChangeLog 10477 RMD160 b07aa3091d8752cdf94c45f39061e689cb968a3f SHA1 36c86758f976dd8e3cb5704c5982ea04442cc57f SHA256 af61e5fadac585ee98c66194164f172dda49efd630668db498c8cfec69c61f9b
-MD5 cc8b28558ed4f138efaecead3b39d70a ChangeLog 10477
-RMD160 b07aa3091d8752cdf94c45f39061e689cb968a3f ChangeLog 10477
-SHA256 af61e5fadac585ee98c66194164f172dda49efd630668db498c8cfec69c61f9b ChangeLog 10477
+EBUILD wanderlust-2.14.0-r3.ebuild 1586 RMD160 06e9e47da16bd7fba930e4d2fa611e4f70736f21 SHA1 6a128cd57083ed68d0e829adc2c9c6aeef057edc SHA256 1229772d011d0578a7af93a30626497b1e0c86dee7cd2f0729574a5a72e50822
+MISC ChangeLog 10698 RMD160 60782d512ef1ffc4c10419838946b871baa643b6 SHA1 d5c7a9cd5081cf101b1295acef42488e25ce3b18 SHA256 acaf8a79359327e01940d12194760274d3c4f15fc1ac5dc1b3893449a05124fb
 MISC metadata.xml 271 RMD160 ddc2a3c253d2dd89f817100afa72bca65813b1fb SHA1 efcf0bf59ed9e1d9b16f0a868b90902ac8c83ec4 SHA256 8493e5a575f03504533323a2adc2355e185e3ddb2b4dec68e90adb122fcdd2df
-MD5 42cbdeef12abd31687396ae303321803 metadata.xml 271
-RMD160 ddc2a3c253d2dd89f817100afa72bca65813b1fb metadata.xml 271
-SHA256 8493e5a575f03504533323a2adc2355e185e3ddb2b4dec68e90adb122fcdd2df metadata.xml 271
-MD5 f7d1f270eacb1e18c4abbada7d9c3435 files/digest-wanderlust-2.14.0-r3 479
-RMD160 53b4cf586cfdb372b2e8e46e0ab35ee1bb4bcb48 files/digest-wanderlust-2.14.0-r3 479
-SHA256 5bd2a9db1f07fa2e6e45a657b16a194c8455f063b406a0aaaf2cc248cd8cb32f files/digest-wanderlust-2.14.0-r3 479
